hphp/test/slow/object_property/713.php.expectf

Fatal error: Cannot access empty property in %s/test/slow/object_property/713.php on line 4
